--- a/_data/students.yml
+++ b/_data/students.yml
@@ -34,6 +34,13 @@
   facebook: Rosca.Oanaa
   bio: 17, Romanian, coder, geek, science enthusiast :D
 
+- name: Kush Pandey
+  github: kushpandey1811
+  facebook:not on fb
+  twitter: kushpandey1811
+  image: kush.jpg
+  bio: A 16 yr old geek, loves coding & opensource...love GCI.
+  
 - name: Haikal Izzuddin
   github: webhaikal
   image: haikal.png
