--- a/_data/students.yml
+++ b/_data/students.yml
@@ -36,9 +36,8 @@
 
 - name: Kush Pandey
   github: kushpandey1811
-  facebook:not on fb
   twitter: kushpandey1811
-  image: kush.jpg
+  image: kushp.jpg
   bio: A 16 yr old geek, loves coding & opensource...love GCI.
   
 - name: Haikal Izzuddin
